--- a/moneyTracker/View/Base.lproj/Main.storyboard
+++ b/moneyTracker/View/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Select category" subtitle=""/>
                                 <connections>
-                                    <segue destination="xmu-t7-cDN" kind="show" id="wkJ-P5-eHr"/>
+                                    <segue destination="xmu-t7-cDN" kind="show" identifier="goToCategories" id="wkJ-P5-eHr"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -84,7 +84,7 @@
                     <navigationItem key="navigationItem" id="kXW-qR-H7S">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="ge9-x6-a5G">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="MNf-Wh-pcj">
-                                <rect key="frame" x="312" y="20" width="55" height="35"/>
+                                <rect key="frame" x="322" y="4.6666666666666679" width="55" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.94509803920000002" green="0.61960784310000006" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
