Add a table view and a xibCell to the mainVC

--- a/moneyTracker/View/Base.lproj/Main.storyboard
+++ b/moneyTracker/View/Base.lproj/Main.storyboard
@@ -17,6 +17,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Q1m-od-mzy">
+                                <rect key="frame" x="16" y="415" width="361" height="349"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vwn-3I-Y1b">
                                 <rect key="frame" x="287" y="739" width="55" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -42,6 +47,7 @@
                     <navigationItem key="navigationItem" id="Zmu-Ay-7Db"/>
                     <connections>
                         <outlet property="addPurchaseButton" destination="Vwn-3I-Y1b" id="Xcz-cu-LK0"/>
+                        <outlet property="purchasesTableView" destination="Q1m-od-mzy" id="uXU-TK-jGn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -73,9 +79,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Select category" subtitle=""/>
-                                <connections>
-                                    <segue destination="xmu-t7-cDN" kind="show" identifier="goToCategories" id="wkJ-P5-eHr"/>
-                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DyK-3Y-r6G"/>
